--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "romeoz/rock-image" : "0.10.*"
     },
     "suggest": {
-      "romeoz/rock-image" : "required by Rock File",
+      "romeoz/rock-file" : "required by Rock File",
       "romeoz/rock-image" : "required by Rock Image"
     },
     "autoload": {
