--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "romeoz/rock-base" : "*@dev",
+        "romeoz/rock-base" : "0.10.*",
         "cebe/markdown": "1.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.7.*",
-        "romeoz/rock-file" : "*@dev",
-        "romeoz/rock-image" : "*@dev"
+        "romeoz/rock-file" : "0.10.*",
+        "romeoz/rock-image" : "0.10.*"
     },
     "suggest": {
       "romeoz/rock-file" : "required by thumb",
