--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     ],
     "require": {
       "php": ">=5.4.0",
-      "romeoz/rock-base" : "0.10.*",
+      "romeoz/rock-base" : "*@dev",
       "cebe/markdown": "1.1.*"
     },
     "require-dev": {
       "phpunit/phpunit": "~4.7.0",
-      "romeoz/rock-file" : "0.10.*",
-      "romeoz/rock-image" : "0.10.*"
+      "romeoz/rock-file" : "*@dev",
+      "romeoz/rock-image" : "*@dev"
     },
     "suggest": {
       "romeoz/rock-file" : "required by Rock File",
