--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,14 @@
     ],
     "require": {
       "php": ">=5.4.0",
-      "romeoz/rock-base" : "*@dev",
+      "romeoz/rock-base" : "0.12.*",
       "cebe/markdown": "1.1.*"
     },
     "require-dev": {
-      "phpunit/phpunit": "~4.7.0",
-      "romeoz/rock-file" : "*@dev",
-      "romeoz/rock-image" : "*@dev"
+      "phpunit/phpunit": "^4.7.0",
+      "romeoz/rock-image" : "0.11.*"
     },
     "suggest": {
-      "romeoz/rock-file" : "required by Rock File",
       "romeoz/rock-image" : "required by Rock Image"
     },
     "autoload": {
@@ -36,7 +34,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.10-dev"
+            "dev-master": "0.11-dev"
         }
     }
 }
